# RepoTest-ProgettoPython

./: pyproject.toml
Automated-Incident-Response-Ban-Engine-Python-Test/: .gitignore  README.md
Automated-Incident-Response-Ban-Engine-Python-Test/docs/: devlog.md  manuale-utente.md  uso-ia.md
Automated-Incident-Response-Ban-Engine-Python-Test/examples/: config.json
Automated-Incident-Response-Ban-Engine-Python-Test/src/ban_engine/firewall/: __init__.py
Automated-Incident-Response-Ban-Engine-Python-Test/tests/: test_models.py
ban_engine_test_completi/: ESEGUI_TEST_WINDOWS.bat  LEGGIMI.txt  VERIFICA_COMPLETA.txt
ban_engine_test_completi/tests/: test_cli_complete.py  test_config_complete.py  test_engine_complete.py  test_firewall_complete.py  test_integration_complete.py  test_models_complete.py  test_parser_complete.py  test_state_complete.py
docs/: devlog.md  manuale-tecnico.md  proposta.md  scelte.md  uso-ia.md
examples/: ban_state.json  config.json
src/automated_incident_response_ban_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ban_engine/: __main__.py  cli.py  config.py  engine.py  models.py  parser.py  state.py
src/ban_engine/firewall/: __init__.py  base.py  dry_run.py  linux.py  windows.py
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_firewall_polymorphism.py  test_parser.py  test_state.py
